I fix error.file problem

--- a/static/index.html
+++ b/static/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./css/style.css">
+  </head>
+  <body>
+    <header>
+      <div class="burger-menu">
+        <a href="#" class="burger-menu_button">
+          <span class="burger-menu_lines"></span>
+        </a>
+        <nav class="burger-menu_nav">
+          <a href="#" class="burger-menu_link">lorem</a>
+          <a href="#" class="burger-menu_link">lorem</a>
+          <a href="#" class="burger-menu_link">lorem</a>
+          <a href="#" class="burger-menu_link">lorem</a>
+          <a href="#" class="burger-menu_link">lorem</a>
+        </nav>
+        <div class="burger-menu_overlay"></div>
+      </div>
+    </header>
+    <script src="./js/main.js"></script>
+  </body>
 </html>
